// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxFormTextArea expect to render without error 1`] = `
<TextArea
  additionalProp="Prop1"
  input={
    {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
  selected="SELECTED_VALUE"
/>
`;

exports[`ReduxFormTextInput expect to render with defaultValue 1`] = `
<TextInput
  additionalProp="Prop1"
  defaultValue="Default Value"
  input={
    {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
  value="Default Value"
/>
`;

exports[`ReduxFormTextInput expect to render without error 1`] = `
<TextInput
  additionalProp="Prop1"
  input={
    {
      "onChange": [MockFunction],
      "value": "Value",
    }
  }
  onChange={[MockFunction]}
  value="Value"
/>
`;
